--- a/docs/troubleshooting/microphone-error.mdx
+++ b/docs/troubleshooting/microphone-error.mdx
@@ -1,38 +1,42 @@
 ---
 sidebar_position: 2
-title: "🎙️ 麦克风访问故障排除"
+title: "🎙️ 麦克风访问问题解决指南"
 ---
 
-确保你的应用程序具有适当的麦克风访问权限对于依赖音频输入的功能至关重要。本指南介绍如何管理和排除麦克风权限问题，特别是在安全上下文中。
+要使用依赖音频输入的功能，确保应用程序具有正确的麦克风访问权限至关重要。本指南将介绍如何管理麦克风权限并解决相关问题，特别是在涉及安全上下文时。
 
-## 理解安全上下文 🔒
+## 了解安全上下文（Secure Context）🔒
 
-出于安全原因，麦克风访问仅限于通过 HTTPS 或从 `localhost` 本地提供的页面。这一要求旨在通过确保数据通过安全通道传输来保护你的数据。
+出于安全考虑，麦克风访问权限仅限于以下两种情况：
+- 通过HTTPS协议提供服务的页面
+- 通过`localhost`访问的本地页面
+
+这项限制的目的是确保你的音频数据始终通过安全通道传输。
 
 ## 常见权限问题 🚫
 
-Chrome、Brave、Microsoft Edge、Opera 和 Vivaldi 等浏览器，以及 Firefox，都会限制对非 HTTPS URL 的麦克风访问。这通常在从同一网络内的其他设备访问站点时成为问题（例如，使用手机访问桌面服务器）。以下是管理这些问题的方法：
+Chrome、Brave、Microsoft Edge、Opera和Vivaldi等Chromium系浏览器，以及Firefox浏览器，都会限制非HTTPS URL的麦克风访问权限。这个问题通常出现在当你使用同一网络内的其他设备访问服务时（比如用手机访问运行在电脑上的服务器）。下面是几种解决方案：
 
-### 非 HTTPS 连接的解决方案
+### 非HTTPS连接的解决方案
 
-1. **设置 HTTPS：**
-   - 强烈建议配置你的服务器以支持 HTTPS。这不仅解决了权限问题，还增强了数据传输的安全性。
+1. **配置HTTPS（推荐）：**
+   - 我们强烈建议为你的服务器配置HTTPS支持。这不仅能解决麦克风访问的权限问题，还能全面提升数据传输的安全性。
 
-2. **临时浏览器标志（谨慎使用）：**
-   - 这些设置强制你的浏览器将某些不安全的 URL 视为安全。这对开发目的有用，但会带来重大安全风险。以下是如何为主要浏览器调整这些设置：
+2. **修改浏览器标志（仅用于开发测试）：**
+   - 通过这些设置，可以强制浏览器将特定的非安全URL视为安全。这种方法适用于开发环境，但存在安全风险，请谨慎使用。具体设置方法如下：
 
-   #### 基于 Chromium 的浏览器（如 Chrome、Brave）
-   - 打开 `chrome://flags/#unsafely-treat-insecure-origin-as-secure`。
-   - 输入你的非 HTTPS 地址（例如 `http://192.168.1.35:3000`）。
-   - 重启浏览器以应用更改。
+   #### Chromium系浏览器（Chrome、Brave等）
+   - 访问`chrome://flags/#unsafely-treat-insecure-origin-as-secure`
+   - 输入你的非HTTPS地址（例如：`http://192.168.1.35:3000`）
+   - 重启浏览器使设置生效
 
-   #### 基于 Firefox 的浏览器
-   - 打开 `about:config`。
-   - 搜索并修改（或创建）字符串值 `dom.securecontext.allowlist`。
-   - 添加你的 IP 地址，用逗号分隔（例如 `http://127.0.0.1:8080`）。
+   #### Firefox浏览器
+   - 访问`about:config`
+   - 找到并修改（如果不存在则创建）字符串值`dom.securecontext.allowlist`
+   - 添加你的IP地址，多个地址用逗号分隔（例如：`http://127.0.0.1:8080`）
 
-### 注意事项和风险 🚨
+### 重要安全提醒 🚨
 
-虽然浏览器标志提供了快速修复方案，但它们会绕过重要的安全检查，这可能使你的设备和数据面临漏洞风险。在规划生产环境时，始终优先考虑适当的安全措施。
+虽然修改浏览器标志可以快速解决问题，但这种方法会绕过重要的安全检查，可能会使你的设备和数据面临安全风险。特别是在规划生产环境时，应该始终优先考虑正规的安全措施。
 
-通过遵循这些最佳实践，你可以确保你的应用程序在维护数据安全性和完整性的同时正确访问麦克风。
+遵循以上最佳实践，你可以在确保数据安全的同时，让应用程序正常访问麦克风功能。记住，安全永远是第一位的。
