--- a/docs/troubleshooting/network-diagrams.mdx
+++ b/docs/troubleshooting/network-diagrams.mdx
@@ -3,161 +3,160 @@ sidebar_position: 3
 title: "🕸️ 网络架构图"
 ---
 
-在这里，我们提供清晰和结构化的图表，帮助你理解不同设置中各个网络组件之间的交互方式。本文档旨在帮助 macOS/Windows 和 Linux 用户。每个场景都使用 Mermaid 图表来展示根据不同的系统配置和部署策略如何设置交互。
+本文提供清晰且结构化的网络架构图，帮助你理解不同部署场景中各组件之间的网络交互方式。我们针对macOS/Windows和Linux用户分别进行说明，并使用Mermaid图表直观展示不同系统配置和部署策略下的网络连接关系。
 
-## Mac OS/Windows 设置选项 🖥️
+## Mac OS/Windows部署方案 🖥️
 
-### Ollama 在主机上，Open WebUI 在容器中
+### 方案一：Ollama运行于主机，Open WebUI运行于容器
 
-在这种场景中，`Ollama` 直接在主机上运行，而 `Open WebUI` 在 Docker 容器中运行。
+在这种配置中，`Ollama`直接在主机系统上运行，而`Open WebUI`运行在Docker容器内。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Mac OS/Windows") {
    Person(user, "用户")
-   Boundary(b1, "Docker Desktop 的 Linux 虚拟机") {
-      Component(openwebui, "Open WebUI", "监听端口 8080")
+   Boundary(b1, "Docker Desktop的Linux虚拟机") {
+      Component(openwebui, "Open WebUI", "监听端口8080")
    }
-   Component(ollama, "Ollama", "监听端口 11434")
+   Component(ollama, "Ollama", "监听端口11434")
 }
-Rel(openwebui, ollama, "通过 Docker 代理进行 API 调用", "http://host.docker.internal:11434")
-Rel(user, openwebui, "通过暴露的端口 -p 3000:8080 发起请求", "http://localhost:3000")
+Rel(openwebui, ollama, "通过Docker代理进行API调用", "http://host.docker.internal:11434")
+Rel(user, openwebui, "通过暴露的端口-p 3000:8080访问", "http://localhost:3000")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-### Ollama 和 Open WebUI 在 Compose 堆栈中
+### 方案二：Ollama和Open WebUI运行于同一Docker Compose Stack
 
-`Ollama` 和 `Open WebUI` 都配置在同一个 Docker Compose 堆栈中，简化了网络通信。
+这种配置将`Ollama`和`Open WebUI`都部署在同一个Docker Compose stack中，简化了组件间的网络通信。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Mac OS/Windows") {
    Person(user, "用户")
-   Boundary(b1, "Docker Desktop 的 Linux 虚拟机") {
-      Boundary(b2, "Compose 堆栈") {
-         Component(openwebui, "Open WebUI", "监听端口 8080")
-         Component(ollama, "Ollama", "监听端口 11434")
+   Boundary(b1, "Docker Desktop的Linux虚拟机") {
+      Boundary(b2, "Compose Stack") {
+         Component(openwebui, "Open WebUI", "监听端口8080")
+         Component(ollama, "Ollama", "监听端口11434")
       }
    }
 }
-Rel(openwebui, ollama, "通过容器间网络进行 API 调用", "http://ollama:11434")
-Rel(user, openwebui, "通过暴露的端口 -p 3000:8080 发起请求", "http://localhost:3000")
+Rel(openwebui, ollama, "通过容器间网络进行API调用", "http://ollama:11434")
+Rel(user, openwebui, "通过暴露的端口-p 3000:8080访问", "http://localhost:3000")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-### Ollama 和 Open WebUI，独立网络
+### 方案三：Ollama和Open WebUI运行于不同Docker网络
 
-在这里，`Ollama` 和 `Open WebUI` 部署在独立的 Docker 网络中，可能会导致连接问题。
+此配置中，`Ollama`和`Open WebUI`分别部署在不同的Docker网络中，这种情况可能会导致连接问题。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Mac OS/Windows") {
    Person(user, "用户")
-   Boundary(b1, "Docker Desktop 的 Linux 虚拟机") {
-      Boundary(b2, "网络 A") {
-         Component(openwebui, "Open WebUI", "监听端口 8080")
+   Boundary(b1, "Docker Desktop的Linux虚拟机") {
+      Boundary(b2, "网络A") {
+         Component(openwebui, "Open WebUI", "监听端口8080")
       }
-      Boundary(b3, "网络 B") {
-         Component(ollama, "Ollama", "监听端口 11434")
+      Boundary(b3, "网络B") {
+         Component(ollama, "Ollama", "监听端口11434")
       }
    }
 }
 Rel(openwebui, ollama, "无法连接")
-Rel(user, openwebui, "通过暴露的端口 -p 3000:8080 发起请求", "http://localhost:3000")
+Rel(user, openwebui, "通过暴露的端口-p 3000:8080访问", "http://localhost:3000")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-### Open WebUI 在主机网络中
+### 方案四：Open WebUI使用host网络模式
 
-在这种配置中，`Open WebUI` 使用主机网络，这会影响其在某些环境中的连接能力。
+在这种配置下，`Open WebUI`使用Docker的host网络模式，但这可能会影响其在某些环境中的连接能力。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Mac OS/Windows") {
    Person(user, "用户")
-   Boundary(b1, "Docker Desktop 的 Linux 虚拟机") {
-      Component(openwebui, "Open WebUI", "监听端口 8080")
+   Boundary(b1, "Docker Desktop的Linux虚拟机") {
+      Component(openwebui, "Open WebUI", "监听端口8080")
    }
 }
 Rel(user, openwebui, "无法连接，主机网络是虚拟机的网络")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
+## Linux部署方案 🐧
 
-## Linux 设置选项 🐧
+### 方案一：Ollama运行于主机，Open WebUI运行于容器（Linux）
 
-### Ollama 在主机上，Open WebUI 在容器中（Linux）
-
-这个图表专门针对 Linux 平台，`Ollama` 在主机上运行，`Open WebUI` 部署在 Docker 容器中。
+这种部署方案专门针对Linux平台，其中`Ollama`运行在主机系统上，而`Open WebUI`运行在Docker容器中。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Linux") {
    Person(user, "用户")
    Boundary(b1, "容器网络") {
-      Component(openwebui, "Open WebUI", "监听端口 8080")
+      Component(openwebui, "Open WebUI", "监听端口8080")
    }
-   Component(ollama, "Ollama", "监听端口 11434")
+   Component(ollama, "Ollama", "监听端口11434")
 }
-Rel(openwebui, ollama, "通过 Docker 代理进行 API 调用", "http://host.docker.internal:11434")
-Rel(user, openwebui, "通过暴露的端口 -p 3000:8080 发起请求", "http://localhost:3000")
+Rel(openwebui, ollama, "通过Docker代理进行API调用", "http://host.docker.internal:11434")
+Rel(user, openwebui, "通过暴露的端口-p 3000:8080访问", "http://localhost:3000")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-### Ollama 和 Open WebUI 在 Compose 堆栈中（Linux）
+### 方案二：Ollama和Open WebUI运行于同一Docker Compose Stack（Linux）
 
-一个设置，其中 `Ollama` 和 `Open WebUI` 都位于同一个 Docker Compose 堆栈中，在 Linux 上实现简单的网络连接。
+这种配置将`Ollama`和`Open WebUI`都部署在同一个Docker Compose stack中，在Linux环境下实现简单高效的网络通信。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Linux") {
    Person(user, "用户")
    Boundary(b1, "容器网络") {
-      Boundary(b2, "Compose 堆栈") {
-         Component(openwebui, "Open WebUI", "监听端口 8080")
-         Component(ollama, "Ollama", "监听端口 11434")
+      Boundary(b2, "Compose Stack") {
+         Component(openwebui, "Open WebUI", "监听端口8080")
+         Component(ollama, "Ollama", "监听端口11434")
       }
    }
 }
-Rel(openwebui, ollama, "通过容器间网络进行 API 调用", "http://ollama:11434")
-Rel(user, openwebui, "通过暴露的端口 -p 3000:8080 发起请求", "http://localhost:3000")
+Rel(openwebui, ollama, "通过容器间网络进行API调用", "http://ollama:11434")
+Rel(user, openwebui, "通过暴露的端口-p 3000:8080访问", "http://localhost:3000")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-### Ollama 和 Open WebUI，独立网络（Linux）
+### 方案三：Ollama和Open WebUI运行于不同Docker网络（Linux）
 
-一个场景，其中 `Ollama` 和 `Open WebUI` 在 Linux 环境下位于不同的 Docker 网络中，这可能会阻碍连接。
+在这种配置中，`Ollama`和`Open WebUI`在Linux环境下分别部署在不同的Docker网络中，这种情况可能会导致连接问题。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Linux") {
    Person(user, "用户")
-   Boundary(b2, "容器网络 A") {
-      Component(openwebui, "Open WebUI", "监听端口 8080")
+   Boundary(b2, "容器网络A") {
+      Component(openwebui, "Open WebUI", "监听端口8080")
    }
-   Boundary(b3, "容器网络 B") {
-      Component(ollama, "Ollama", "监听端口 11434")
+   Boundary(b3, "容器网络B") {
+      Component(ollama, "Ollama", "监听端口11434")
    }
 }
 Rel(openwebui, ollama, "无法连接")
-Rel(user, openwebui, "通过暴露的端口 -p 3000:8080 发起请求", "http://localhost:3000")
+Rel(user, openwebui, "通过暴露的端口-p 3000:8080访问", "http://localhost:3000")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-### Open WebUI 在主机网络中，Ollama 在主机上（Linux）
+### 方案四：Open WebUI和Ollama都使用host网络模式（Linux）
 
-一个最优布局，其中 `Open WebUI` 和 `Ollama` 都使用主机的网络，在 Linux 系统上实现无缝交互。
+这是Linux环境下的最优配置方案，`Open WebUI`和`Ollama`都使用主机网络模式，可以实现最简单和最高效的网络通信。
 
 ```mermaid
 C4Context
 Boundary(b0, "主机 - Linux") {
    Person(user, "用户")
-   Component(openwebui, "Open WebUI", "监听端口 8080")
-   Component(ollama, "Ollama", "监听端口 11434")
+   Component(openwebui, "Open WebUI", "监听端口8080")
+   Component(ollama, "Ollama", "监听端口11434")
 }
-Rel(openwebui, ollama, "通过 localhost 进行 API 调用", "http://localhost:11434")
-Rel(user, openwebui, "通过监听端口发起请求", "http://localhost:8080")
+Rel(openwebui, ollama, "通过localhost进行API调用", "http://localhost:11434")
+Rel(user, openwebui, "通过监听端口访问", "http://localhost:8080")
 UpdateRelStyle(user, openwebui, $offsetX="-100", $offsetY="-50")
 ```
 
-每种设置都针对不同的部署策略和网络配置，帮助你选择最适合你需求的布局。
+以上每种部署方案都针对特定的使用场景和网络需求，你可以根据自己的具体情况选择最适合的配置方案。
