同步18号文档翻译

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,7 +10,7 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 # Open WebUI
 
-**Open WebUI 是一个[可扩展的](https://docs.openwebui.com/features/plugin/)、功能丰富且用户友好的自托管 AI 平台，专为完全离线运行而设计。** 它支持多种 LLM 运行环境，如 **Ollama** 和 **OpenAI 兼容的 API**，并具有**内置推理引擎**用于 RAG，使其成为**强大的 AI 部署解决方案**。
+**Open WebUI 是一款[高度可扩展](https://docs.openwebui.com/features/plugin/)、功能丰富、操作便捷的自托管 AI 平台，完全支持离线运行。** 它不仅支持 **Ollama** 和 **OpenAI 兼容接口**等多种大语言模型运行环境，还内置了用于 RAG 的推理引擎，是一套**功能强大的 AI 部署解决方案**。
 
 ![GitHub stars](https://img.shields.io/github/stars/open-webui/open-webui?style=social)
 ![GitHub forks](https://img.shields.io/github/forks/open-webui/open-webui?style=social)
@@ -25,115 +25,149 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 ![Open WebUI 演示](/img/demo.gif)
 
-## 使用 Docker 快速开始 🐳
+## Docker 快速上手指南 🐳
 
-**如果 Ollama 在您的计算机上**，使用此命令：
+**如果您的电脑上已安装 Ollama**，只需运行以下命令：
 
 ```bash
 docker run -d -p 3000:8080 --add-host=host.docker.internal:host-gateway -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:main
 ```
 
-**要使用 Nvidia GPU 支持运行 Open WebUI**，使用此命令：
+**需要启用 Nvidia GPU 支持**？请使用这个命令：
 
 ```bash
 docker run -d -p 3000:8080 --gpus all --add-host=host.docker.internal:host-gateway -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:cuda
 ```
 
-### Open WebUI 与 Ollama 捆绑安装
+### Ollama 一体化安装包
 
-此安装方法使用单个容器镜像，将 Open WebUI 与 Ollama 捆绑在一起，通过单个命令实现简化的设置。根据您的硬件设置选择适当的命令：
+我们提供了一个打包了 Open WebUI 和 Ollama 的一体化容器镜像，让您通过一条命令就能完成所有设置。根据您的硬件配置，选择合适的安装命令：
 
-- **使用 GPU 支持**：
-通过运行以下命令利用 GPU 资源：
+- **GPU 版本**：
+如果您的设备配备了 GPU，可以使用以下命令充分利用硬件性能：
 
 ```bash
 docker run -d -p 3000:8080 --gpus=all -v ollama:/root/.ollama -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:ollama
   ```
 
-- **仅使用 CPU**：
-如果您不使用 GPU，请使用此命令：
+- **CPU 版本**：
+如果您的设备没有 GPU，请使用这个命令：
 
 ```bash
 docker run -d -p 3000:8080 -v ollama:/root/.ollama -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:ollama
   ```
 
-这两个命令都提供了 Open WebUI 和 Ollama 的内置无障碍安装，确保您能够快速启动并运行所有功能。
+这两个命令都会自动完成 Open WebUI 和 Ollama 的安装配置，让您可以立即开始使用所有功能。
 
-安装完成后，您可以通过 [http://localhost:3000](http://localhost:3000) 访问 Open WebUI。尽情享用吧！😄
+安装完成后，打开浏览器访问 [http://localhost:3000](http://localhost:3000) 就能开始使用了。开始探索吧！😄
 
-### 使用开发分支 🌙
+### 体验开发版本 🌙
 
 :::warning
-`:dev` 分支包含最新的不稳定功能和更改。使用时请自行承担风险，因为它可能存在错误或不完整的功能。
+开发版（`:dev`）包含最新的实验性功能和更新，可能存在不稳定因素或未完成的功能，请谨慎使用。
 :::
 
-如果您想尝试最新的前沿功能，并且能接受偶尔的不稳定性，可以使用 `:dev` 标签，如下所示：
+如果您想抢先体验最新功能，且能接受偶尔的不稳定，可以尝试使用 `:dev` 版本：
 
 ```bash
 docker run -d -p 3000:8080 -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:dev
 ```
 
-### 更新 Open WebUI
+### 版本更新指南
 
-要轻松更新 Open WebUI 容器，请按照以下步骤操作：
+以下是更新 Open WebUI 容器的简便方法：
 
 #### 手动更新
-使用 [Watchtower](https://containrrr.dev/watchtower) 手动更新您的 Docker 容器：
+借助 [Watchtower](https://containrrr.dev/watchtower) 工具手动更新容器：
 ```bash
 docker run --rm -v /var/run/docker.sock:/var/run/docker.sock containrrr/watchtower --run-once open-webui
 ```
 
 #### 自动更新
-每 5 分钟自动更新您的容器：
+设置每 5 分钟自动检查并更新容器：
 ```bash
 docker run -d --name watchtower --restart unless-stopped -v /var/run/docker.sock:/var/run/docker.sock containrrr/watchtower --interval 300 open-webui
 ```
 
-🔧 **注意**：如果您的容器名称不同，请将 `open-webui` 替换为您的容器名称。
+🔧 **小贴士**：如果您使用了不同的容器名称，记得将命令中的 `open-webui` 替换为您的容器名称。
 
-## 手动安装
+## 手动安装教程
+
+Open WebUI 提供两种安装方式：使用 `uv` 运行时管理器或传统的 Python `pip` 包管理器。尽管两种方法都可行，但我们**强烈推荐使用 `uv`**，因为它能更好地管理环境依赖，大大减少潜在的冲突问题。
+
+### 使用 `uv` 安装（推荐方案）
+
+`uv` 运行时管理器为 Open WebUI 等应用提供了完善的 Python 环境管理。按照以下步骤开始安装：
+
+#### 1. 安装 `uv`
+
+选择适合您操作系统的安装命令：
+
+- **macOS/Linux 系统**：
+```bash
+curl -LsSf https://astral.sh/uv/install.sh | sh
+  ```
+
+- **Windows 系统**：
+```powershell
+powershell -ExecutionPolicy ByPass -c "irm https://astral.sh/uv/install.ps1 | iex"
+  ```
+
+#### 2. 启动 Open WebUI
+
+安装好 `uv` 后，启动 Open WebUI 就很简单了。使用下面的命令，注意设置 `DATA_DIR` 环境变量以保存数据。以下是不同平台的示例：
+
+- **macOS/Linux 系统**：
+```bash
+DATA_DIR=~/.open-webui uvx --python 3.11 open-webui@latest serve
+  ```
+
+- **Windows 系统**：
+```powershell
+$env:DATA_DIR="C:\open-webui\data"; uvx --python 3.11 open-webui@latest serve
+  ```
 
 ### 使用 `pip` 安装
 
-对于使用 Python 包管理器 `pip` 安装 Open WebUI 的用户，**强烈建议使用 `uv` 或 `conda` 等 Python 运行时管理器**。这些工具有助于有效管理 Python 环境并避免冲突。
+如果您选择使用 Python 的 `pip` 包管理器安装 Open WebUI，**我们建议您配合使用 `uv` 或 `conda` 等 Python 环境管理工具**，这样可以更好地管理依赖关系，避免环境冲突。
 
-Python 3.11 是开发环境。Python 3.12 似乎可以工作但尚未经过全面测试。Python 3.13 完全未经测试——**使用风险自负**。
+目前，我们的开发环境是基于 Python 3.11。Python 3.12 虽然基本可用，但还未经过全面测试。至于 Python 3.13，由于完全未经测试，**使用时需要您自担风险**。
 
-1. **安装 Open WebUI**：
+1. **安装步骤**：
 
-打开终端并运行以下命令：
+在终端中执行：
 ```bash
 pip install open-webui
    ```
 
-2. **启动 Open WebUI**：
+2. **启动服务**：
 
-安装完成后，使用以下命令启动服务器：
+完成安装后，执行以下命令启动服务：
 ```bash
 open-webui serve
    ```
 
-### 更新 Open WebUI
+### 升级到新版本
 
-要更新到最新版本，只需运行：
+需要升级到最新版本？只需一条命令：
 
 ```bash
 pip install --upgrade open-webui
 ```
 
-此方法安装所有必要的依赖项并启动 Open WebUI，实现简单高效的设置。安装后，您可以通过 [http://localhost:8080](http://localhost:8080) 访问 Open WebUI。尽情享用吧！😄
+这种安装方式会自动处理所有必要的依赖项，让您能快速部署 Open WebUI。安装完成后，访问 [http://localhost:8080](http://localhost:8080) 即可开始使用。祝您使用愉快！😄
 
-## 其他安装方法
+## 更多安装选项
 
-我们提供各种安装替代方案，包括非 Docker 原生安装方法、Docker Compose、Kustomize 和 Helm。访问我们的 [Open WebUI 文档](https://docs.openwebui.com/getting-started/) 或加入我们的 [Discord 社区](https://discord.gg/5rJgQTnV4s) 获取全面指导。
+除了上述方法，我们还提供了其他多种安装方案，包括原生安装、Docker Compose、Kustomize 和 Helm 等。欢迎访问我们的 [Open WebUI 官方文档](https://docs.openwebui.com/getting-started/) 或加入 [Discord 社区](https://discord.gg/5rJgQTnV4s) 获取更详细的指导。
 
-继续阅读完整的[入门指南](/getting-started)。
+想了解更多信息？请查看完整的[入门指南](/getting-started)。
 
-## 赞助商 🙌
+## 特别鸣谢 🙌
 
 <TopBanners />
 
 <SponsorList />
 
-我们非常感谢赞助商的慷慨支持。他们的贡献帮助我们维护和改进我们的项目，确保我们能够继续为社区提供优质的工作。感谢您！
+衷心感谢所有赞助商的慷慨支持！正是有了您们的贡献，我们才能持续改进项目，为社区提供更优质的服务。感谢有您！
 
