--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -12,6 +12,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ### 📜 目录
 
+- [问：如何自定义徽标和品牌？](#q-how-do-i-customize-the-logo-and-branding)
 - [问：为什么要我注册？我的数据会被发送到哪里？](#q-why-am-i-asked-to-sign-up-where-are-my-data-being-sent-to)
 - [问：为什么我的 Docker 容器无法使用 localhost 连接到主机上的服务？](#q-why-cant-my-docker-container-connect-to-services-on-the-host-using-localhost)
 - [问：如何让我的主机服务对 Docker 容器可访问？](#q-how-do-i-make-my-hosts-services-accessible-to-docker-containers)
@@ -26,6 +27,13 @@ import { TopBanners } from "@site/src/components/TopBanners";
 - [问：我更新/重启后登录不了了，我不得不创建新账号，而且所有聊天记录都不见了。](#q-i-updatedrestarted-and-now-my-login-isnt-working-anymore-i-had-to-create-a-new-account-and-all-my-chats-are-gone)
 - [问：我尝试登录但失败了，创建了新账号后被告知需要管理员激活。](#q-i-tried-to-login-and-couldnt-made-a-new-account-and-now-im-being-told-my-account-needs-to-be-activated-by-an-admin)
 - [问：为什么 Open WebUI 因 SSL 错误而无法启动？](#q-why-cant-open-webui-start-with-an-ssl-error)
+
+#### **问：如何自定义徽标和品牌？**
+
+**答：** 您可以通过购买我们的**[企业授权](https://docs.openwebui.com/enterprise)**来实现主题、徽标和品牌的自定义，这将为您解锁专属的企业级功能。
+
+如需了解企业解决方案和品牌定制的更多信息，欢迎通过以下方式联系我们的销售团队：
+📧 **sales@openwebui.com**
 
 #### **问：为什么要我注册？我的数据会被发送到哪里？**
 
