--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -1,23 +1,35 @@
 ---
 sidebar_position: 4
-title: "📚 进阶主题"
+title: "📚 高级主题"
 ---
 
-# 📚 进阶主题
+# 📚 高级主题
 
-探索 Open WebUI 的深层概念和高级配置，以提升您的部署体验。
+探索更深层次的概念和 Open WebUI 的高级配置，以增强您的设置。
 
 ---
 
-## 📊 日志和监控
-了解如何有效地监控、记录和进行故障排查。
-[日志与监控](/getting-started/advanced-topics/logging)
+## 🛠️ 开发
+了解开发环境设置并为 Open WebUI 做出贡献。
+[开发指南](/getting-started/advanced-topics/development)
+
+---
+
+## 📝 日志记录
+学习如何配置和管理日志以排除系统故障。
+[日志记录指南](/getting-started/advanced-topics/logging)
 
 ---
 
 ## 🔒 HTTPS 加密
-通过在部署中实施 HTTPS 加密确保通信安全。
-[HTTPS 加密](/getting-started/advanced-topics/https-encryption)
+通过在部署中实施 HTTPS 加密来确保安全通信。
+[HTTPS 加密指南](/getting-started/advanced-topics/https-encryption)
+
+---
+
+## 📊 监控
+学习如何监控您的 Open WebUI 实例，包括健康检查、模型连接性和响应测试。
+[监控指南](/getting-started/advanced-topics/monitoring)
 
 ---
 
