--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -4,51 +4,51 @@ title: "⚙️ 工具"
 ---
 
 ## 什么是工具？
-工具是在请求时提供给大语言模型（Large Language Model，简称 LLM）的 Python 脚本。工具使大语言模型能够执行操作并获取额外的上下文信息。通常情况下，你选择的大语言模型需要支持函数调用功能才能可靠地使用工具。
+工具是在请求时提供给 LLM 的 Python 脚本。工具使 LLM 能够执行操作并获取额外的上下文信息作为结果。通常情况下，您选择的 LLM 需要支持函数调用（function calling）功能才能可靠地使用工具。
 
-工具为聊天提供了多种应用场景，包括网络搜索、网页抓取和在聊天中进行 API 交互。
+工具为聊天功能提供了多种应用场景，包括网络搜索、网页抓取和在聊天中进行 API 交互等。
 
-你可以在[社区网站](https://openwebui.com/tools)上找到许多可用的工具，并且可以轻松地将它们导入到你的 Open WebUI 实例中。
+您可以在[社区网站](https://openwebui.com/tools)上找到许多可用的工具，这些工具都可以轻松导入到您的 Open WebUI 实例中。
 
 ## 如何使用工具？
-[完成安装](#如何安装工具)后，你可以将工具分配给任何支持函数调用的大语言模型并启用该工具来使用它。要将工具分配给模型，你需要进入工作区 => 模型。在这里你可以选择想要启用工具的模型。
+[完成安装后](#如何安装工具)，您可以将工具分配给任何支持函数调用的 LLM，并启用该工具来使用它。要将工具分配给模型，请导航到 Workspace => Models。在这里，您可以选择想要启用工具的模型。
 
-点击铅笔图标编辑模型设置后，向下滚动到工具部分，勾选你想要启用的工具。完成后必须点击保存。
+点击编辑图标（铅笔图标）来修改模型设置后，向下滚动到工具部分，勾选您希望启用的工具。完成后请务必点击保存。
 
-现在模型已启用工具，你可以在与大语言模型聊天时点击"+"图标来使用各种工具。请注意，启用工具并不意味着它一定会被使用，这只是意味着大语言模型可以选择使用该工具。
+工具启用后，您可以在与 LLM 对话时点击添加工具按钮（"+"图标）来使用各种工具。请注意，启用工具并不意味着它会被强制使用，而是意味着 LLM 将有选项可以调用这个工具。
 
-此外，我们在社区网站上提供了一个过滤器功能，允许大语言模型自动选择工具，而无需你在"+"图标菜单中手动启用它们：https://openwebui.com/f/hub/autotool_filter/
+此外，我们在社区网站上提供了一个自动工具过滤器功能，让 LLM 能够自动选择工具，而无需您在添加工具菜单中手动启用：https://openwebui.com/f/hub/autotool_filter/
 
-请注意：使用自动工具过滤器时，你仍需要按照上述步骤为每个模型启用工具。
+请注意：即使使用自动工具过滤器，您仍然需要按照上述步骤为每个模型启用相应的工具。
 
 ## 如何安装工具
-工具导入过程非常简单，你有两种选择：
+工具的导入过程非常简单，您可以选择以下两种方式之一：
 
 ### 下载并手动导入
 访问社区网站：https://openwebui.com/tools/
-1) 点击你想要导入的工具
-2) 点击页面右上角的蓝色"获取"按钮
-3) 点击"下载为 JSON 导出"
-4) 现在你可以通过进入工作区 => 工具并点击"导入工具"将工具上传到 Open WebUI
+1) 选择您要导入的工具
+2) 点击页面右上角的"Get"按钮
+3) 点击"Download as JSON export"
+4) 导航至 Workspace => Tools，点击"Import Tools"将工具导入到 Open WebUI 中
 
 ### 通过 Open WebUI URL 导入
 1) 访问社区网站：https://openwebui.com/tools/
-2) 点击你想要导入的工具
-3) 点击页面右上角的蓝色"获取"按钮
-4) 输入你的 Open WebUI 实例的 IP 地址，点击"导入到 WebUI"，这将自动打开你的实例并允许你导入工具
+2) 选择您要导入的工具
+3) 点击页面右上角的"Get"按钮
+4) 输入您的 Open WebUI 实例 IP 地址，点击"Import to WebUI"，系统将自动打开您的实例并引导您完成工具导入
 
-注意：你可以使用手动导入方法安装自己的工具和社区网站上未收录的其他工具。请不要导入你不了解或来源不可信的工具。运行未知代码始终存在风险。
+安全提示：您可以使用手动导入方法来安装自定义工具或未在社区网站上登记的其他工具。请务必谨慎，不要导入来源不明或不可信的工具。执行未知代码可能会带来安全风险。
 
 ## 工具能做什么？
-工具通过提供广泛的功能为交互式对话启用多样化的应用场景，例如：
+工具为交互式对话提供了丰富的功能支持，例如：
 
-- [**网络搜索**](https://openwebui.com/t/constliakos/web_search/)：执行实时网络搜索以获取实时信息
-- [**图像生成**](https://openwebui.com/t/justinrahb/image_gen/)：根据用户提示生成图像
-- [**外部语音合成**](https://openwebui.com/t/justinrahb/elevenlabs_tts/)：在聊天中进行 API 请求以集成外部语音合成服务 ElevenLabs，并根据大语言模型输出生成音频
+- [**网络搜索**](https://openwebui.com/t/constliakos/web_search/)：执行实时网络搜索，获取最新信息
+- [**图像生成**](https://openwebui.com/t/justinrahb/image_gen/)：根据用户提示词生成图像
+- [**外部语音合成**](https://openwebui.com/t/justinrahb/elevenlabs_tts/)：通过 API 调用集成 ElevenLabs 外部语音合成服务，将 LLM 输出转换为音频
 
 ## 编写自定义工具包
 
-工具包在单个 Python 文件中定义，包含带有元数据的顶级文档字符串和一个 `Tools` 类。
+工具包需要在单个 Python 文件中定义，该文件需包含带有元数据的顶级文档字符串（docstring）和一个 `Tools` 类。
 
 ### 顶级文档字符串示例
 
@@ -68,20 +68,20 @@ licence: MIT
 
 ### Tools 类
 
-工具必须在名为 `Tools` 的类中定义为方法，可以选择包含名为 `Valves` 和 `UserValves` 的子类，例如：
+工具必须作为方法定义在名为 `Tools` 的类中，并可以选择性地包含 `Valves` 和 `UserValves` 子类，示例如下：
 
 ```python
 class Tools:
     def __init__(self):
-        """初始化工具。"""
+        """初始化工具"""
         self.valves = self.Valves()
 
     class Valves(BaseModel):
-        api_key: str = Field("", description="在此输入你的 API 密钥")
+        api_key: str = Field("", description="在此输入您的 API 密钥")
 
     def reverse_string(self, string: str) -> str:
         """
-        反转输入字符串。
+        反转输入字符串
         :param string: 要反转的字符串
         """
         # valves 使用示例
@@ -90,33 +90,33 @@ class Tools:
         return string[::-1]
 ```
 
-### 类型提示
-每个工具必须为参数提供类型提示。从 OpenWebUI 版本 0.4.3 开始，这些类型也可以是嵌套的，例如 `queries_and_docs: list[tuple[str, int]]`。这些类型提示用于生成发送给模型的 JSON schema。没有类型提示的工具的一致性会大大降低。
+### Type Hints
+每个工具必须具有类型提示（type hints），以便于生成 JSON 模式（JSON schema）。没有类型提示的工具将无法可靠地工作。
 
-### Valves 和 UserValves - （可选，但强烈建议）
+### Valves 和 UserValves - (可选，但强烈建议)
 
-Valves 和 UserValves 用于允许用户提供动态详细信息，如 API 密钥或配置选项。这些将在给定工具的图形界面菜单中创建一个可填充字段或布尔开关。
+Valves 和 UserValves 用于允许用户提供动态细节，例如 API 密钥或配置选项。这些将在 GUI 菜单中创建可填充字段或布尔开关。
 
-Valves 仅由管理员配置，而 UserValves 可由任何用户配置。
+Valves 只能由管理员配置，而 UserValves 可以由任何用户配置。
 
 <details>
 <summary>示例</summary>
 
-```python
-# 定义 Valves
+```
+# Define and Valves
     class Valves(BaseModel):
         priority: int = Field(
-            default=0, description="过滤器操作的优先级。"
+            default=0, description="Priority level for the filter operations."
         )
         test_valve: int = Field(
-            default=4, description="控制数值的阀门"
+            default=4, description="A valve controlling a numberical value"
         )
         pass
 
-    # 定义 UserValves
+    # Define any UserValves
     class UserValves(BaseModel):
         test_user_valve: bool = Field(
-            default=False, description="控制 True/False（开/关）开关的用户阀门"
+            default=False, description="A user valve controlling a True/False (on/off) switch"
         )
         pass
 
@@ -125,30 +125,30 @@ Valves 仅由管理员配置，而 UserValves 可由任何用户配置。
 ```
 </details>
 
-### 可选参数
-以下是你的工具可以依赖的可选参数列表：
-- `__event_emitter__`：发出事件（见下一节）
-- `__event_call__`：与事件发射器相同，但可用于用户交互
-- `__user__`：包含用户信息的字典
-- `__metadata__`：包含聊天元数据的字典
-- `__messages__`：之前消息的列表
-- `__files__`：附加文件
-- `__model__`：模型名称
+### Optional Arguments
+以下是工具可以依赖的选项列表：
+- `__event_emitter__`: 发出事件（见下文）
+- `__event_call__`: 与事件发射器相同，但可用于用户交互
+- `__user__`: 包含用户信息的数据库
+- `__metadata__`: 包含聊天元数据的数据库
+- `__messages__`: 先前消息的列表
+- `__files__`: 附加文件
+- `__model__`: 模型名称
 
-### 事件发射器
-事件发射器用于向聊天界面添加额外信息。与过滤器出口类似，事件发射器能够向聊天追加内容。与过滤器出口不同，它们不能删除信息。此外，发射器可以在工具的任何阶段激活。
+### Event Emitters
+事件发射器用于向聊天界面添加额外信息。与过滤器出口不同，事件发射器可以附加内容到聊天中。与过滤器出口不同，它们不能剥离信息。此外，它们可以在工具的任何阶段激活。
 
 有两种不同类型的事件发射器：
 
-#### 状态
-这用于在执行步骤时向消息添加状态。这些可以在工具的任何阶段完成。这些状态显示在消息内容的正上方。这对于延迟大语言模型响应或处理大量信息的工具非常有用。这允许你实时告知用户正在处理什么。
+#### Status
+此类型用于在消息进行步骤时添加状态。这些可以在工具的任何阶段完成。这些状态出现在消息内容上方。这些对于延迟 LLM 响应或处理大量信息的工具非常有用。这允许您实时通知用户正在处理的内容。
 
-```python
+```
 await __event_emitter__(
             {
-                "type": "status", # 在这里设置类型
-                "data": {"description": "在聊天中显示的消息", "done": False, "hidden": False},
-                # 注意这里 done 为 False，表示我们仍在发出状态
+                "type": "status", # We set the type here
+                "data": {"description": "Message that shows up in the chat", "done": False, "hidden": False},
+                # Note done is False here indicating we are still emitting statuses
             }
         )
 ```
@@ -156,31 +156,31 @@ await __event_emitter__(
 <details>
 <summary>示例</summary>
 
-```python
+```
 async def test_function(
         self, prompt: str, __user__: dict, __event_emitter__=None
     ) -> str:
         """
-        这是一个演示
+        This is a demo
 
-        :param test: 这是一个测试参数
+        :param test: this is a test parameter
         """
 
         await __event_emitter__(
             {
-                "type": "status", # 在这里设置类型
-                "data": {"description": "在聊天中显示的消息", "done": False},
-                # 注意这里 done 为 False，表示我们仍在发出状态
+                "type": "status", # We set the type here
+                "data": {"description": "Message that shows up in the chat", "done": False},
+                # Note done is False here indicating we are still emitting statuses
             }
         )
 
-        # 在这里执行其他逻辑
+        # Do some other logic here
         await __event_emitter__(
             {
                 "type": "status",
-                "data": {"description": "完成任务消息", "done": True, "hidden": False},
-                # 注意这里 done 为 True，表示我们已完成发出状态
-                # 你也可以设置 "hidden": True，如果你想在返回消息后删除状态
+                "data": {"description": "Completed a task message", "done": True, "hidden": False},
+                # Note done is True here indicating we are done emitting statuses
+                # You can also set "hidden": True if you want to remove the status once the message is returned
             }
         )
 
@@ -188,23 +188,23 @@ async def test_function(
             await __event_emitter__(
                 {
                     "type": "status",
-                    "data": {"description": f"发生错误：{e}", "done": True},
+                    "data": {"description": f"An error occured: {e}", "done": True},
                 }
             )
 
-            return f"告诉用户：{e}"
+            return f"Tell the user: {e}"
 ```
 </details>
 
-#### 消息
-此类型用于在工具的任何阶段向大语言模型追加消息。这意味着你可以在大语言模型响应之前、之后或期间追加消息、嵌入图像，甚至渲染网页。
+#### Message
+此类型用于在工具的任何阶段向 LLM 附加消息。这意味着您可以在 LLM 响应之前、之后或期间附加消息、嵌入图像，甚至渲染网页。
 
-```python
+```
 await __event_emitter__(
                     {
-                        "type": "message", # 在这里设置类型
-                        "data": {"content": "此消息将被追加到聊天中。"},
-                        # 注意对于消息类型，我们不必设置完成条件
+                        "type": "message", # We set the type here
+                        "data": {"content": "This message will be appended to the chat."},
+                        # Note that with message types we do NOT have to set a done condition
                     }
                 )
 ```
@@ -212,21 +212,21 @@ await __event_emitter__(
 <details>
 <summary>示例</summary>
 
-```python
+```
 async def test_function(
         self, prompt: str, __user__: dict, __event_emitter__=None
     ) -> str:
         """
-        这是一个演示
+        This is a demo
 
-        :param test: 这是一个测试参数
+        :param test: this is a test parameter
         """
 
         await __event_emitter__(
                     {
-                        "type": "message", # 在这里设置类型
-                        "data": {"content": "此消息将被追加到聊天中。"},
-                        # 注意对于消息类型，我们不必设置完成条件
+                        "type": "message", # We set the type here
+                        "data": {"content": "This message will be appended to the chat."},
+                        # Note that with message types we do NOT have to set a done condition
                     }
                 )
 
@@ -234,10 +234,79 @@ async def test_function(
             await __event_emitter__(
                 {
                     "type": "status",
-                    "data": {"description": f"发生错误：{e}", "done": True},
+                    "data": {"description": f"An error occured: {e}", "done": True},
                 }
             )
 
-            return f"告诉用户：{e}"
+            return f"Tell the user: {e}"
+```
+</details>
+
+#### Citations
+此类型用于在聊天中提供引用或参考。您可以使用它来指定内容、来源和任何相关元数据。以下是如何发出引用事件的示例：
+
+```
+await __event_emitter__(
+    {
+        "type": "citation",
+        "data": {
+            "document": [content],
+            "metadata": [
+                {
+                    "date_accessed": datetime.now().isoformat(),
+                    "source": title,
+                }
+            ],
+            "source": {"name": title, "url": url},
+        },
+    }
+)
+```
+如果您发送多个引用，您可以迭代引用并多次调用发射器。在实现自定义引用时，请确保在 `Tools` 类 `__init__` 方法中设置 `self.citation = False`。否则，内置引用将覆盖您推送的引用。例如：
+
+```python
+def __init__(self):
+    self.citation = False
+```
+
+警告：如果您设置 `self.citation = True`，这将替换您推送的自定义引用，并完全管理您自己的引用参考。
+
+<details>
+<summary>示例</summary>
+
+```
+class Tools:
+    class UserValves(BaseModel):
+        test: bool = Field(
+            default=True, description="test"
+        )
+
+    def __init__(self):
+        self.citation = False
+
+async def test_function(
+        self, prompt: str, __user__: dict, __event_emitter__=None
+    ) -> str:
+        """
+        This is a demo that just creates a citation
+
+        :param test: this is a test parameter
+        """
+
+        await __event_emitter__(
+            {
+                "type": "citation",
+                "data": {
+                    "document": ["This message will be appended to the chat as a citation when clicked into"],
+                    "metadata": [
+                        {
+                            "date_accessed": datetime.now().isoformat(),
+                            "source": title,
+                        }
+                    ],
+                    "source": {"name": "Title of the content"", "url": "http://link-to-citation"},
+                },
+            }
+        )
 ```
 </details>
